fix text overflow in project card

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -70,6 +70,7 @@
 .project-card-text {
     height: 100%;
     cursor: pointer;
+    border: 1px solid red;
 }
 
 .project-card h3 {
@@ -80,6 +81,9 @@
 .project-card p {
     padding: 0;
     margin-top: 10px;
+    border: 1px solid green;
+    word-wrap: break-word;
+    overflow: hidden;
 }
 #add-project-btn {
     justify-content: center;
